--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+              apiKey: "AIzaSyCYiaAH3wRzW6557xLJQ6zm9-RuSKBWWuM",
+              authDomain: "orbdefine.firebaseapp.com",
+              projectId: "orbdefine",
+              storageBucket: "orbdefine.firebasestorage.app",
+              messagingSenderId: "247935667317",
+              appId: "1:247935667317:web:2dff8b9b44848553fafc3c",
+              measurementId: "G-0VGTHSL2VZ"
         };
         try {
             initializeApp(firebaseConfig);
